EngineCore/include/EngineAPI.h

	  // 0xFFFFFFFF is the canonical 'null' value for the default entt::entity
#  define WS_INVALID_ENTITY (static_cast<uint32_t>(entt::entity{entt::null}))
	/* ── opaque handle ─────────────────────────────────────────── */
	typedef void* EngineContextHandle;
	/* ── entity handle ─────────────────────────────────────────── */
	typedef struct EntityId { uint32_t id; } EntityId;
	/// Standard render layers - use custom values between these for fine control
	typedef enum {
		RENDER_LAYER_BACKGROUND = -1000,  ///< Clear operations, skybox  
		RENDER_LAYER_TERRAIN = 0,      ///< Ground tiles, background elements
		RENDER_LAYER_ENTITIES = 100,    ///< Game objects, sprites, characters
		RENDER_LAYER_EFFECTS = 200,    ///< Particles, visual effects  
		RENDER_LAYER_UI = 1000,   ///< User interface elements
		RENDER_LAYER_DEBUG = 2000,   ///< Debug overlays, gizmos
		RENDER_LAYER_POST_PROCESS = 3000   ///< Screen effects, filters
	} RenderLayer;
	/// Frame rendering statistics
	typedef struct {
		float frameTime;
		float renderTime;
		float updateTime;
		int drawCalls;
		int triangles;
		int entities;
		long memoryUsed;
	} FrameStats;
	/// Performance metrics
	typedef struct {
		float avgFrameTime;
		float minFrameTime;
		float maxFrameTime;
		float avgFPS;
		int totalDrawCalls;
		int totalTriangles;
		long totalMemoryUsed;
		long peakMemoryUsed;
	} PerformanceMetrics;
	/// Profiling section result
	typedef struct {
		char name[64];
		float totalTime;
		float avgTime;
		float minTime;
		float maxTime;
		int callCount;
	} ProfileSection;
	/// Texture information
	typedef struct {
		int width;
		int height;
		int channels;
		int format;
		long memorySize;
		char path[256];
	} TextureInfo;
	/// Editor render flags
	typedef enum {
		EDITOR_RENDER_NONE = 0,
		EDITOR_RENDER_SHOW_GRID = 1 << 0,
		EDITOR_RENDER_SHOW_GIZMOS = 1 << 1,
		EDITOR_RENDER_SHOW_BOUNDS = 1 << 2,
		EDITOR_RENDER_SHOW_WIREFRAME = 1 << 3,
		EDITOR_RENDER_SHOW_NORMALS = 1 << 4,
		EDITOR_RENDER_SHOW_COLLIDERS = 1 << 5,
		EDITOR_RENDER_SHOW_LIGHTS = 1 << 6,
		EDITOR_RENDER_SHOW_CAMERAS = 1 << 7,
		EDITOR_RENDER_SHOW_AUDIO = 1 << 8,
		EDITOR_RENDER_SHOW_PARTICLES = 1 << 9,
		EDITOR_RENDER_SHOW_UI = 1 << 10,
		EDITOR_RENDER_ALL = 0x7FF
	} EditorRenderFlags;
	/// Debug render flags
	typedef enum {
		DEBUG_RENDER_NONE = 0,
		DEBUG_RENDER_ENTITY_BOUNDS = 1 << 0,
		DEBUG_RENDER_COLLISION_SHAPES = 1 << 1,
		DEBUG_RENDER_PATHFINDING = 1 << 2,
		DEBUG_RENDER_PHYSICS = 1 << 3,
		DEBUG_RENDER_AUDIO = 1 << 4,
		DEBUG_RENDER_LIGHTING = 1 << 5,
		DEBUG_RENDER_PERFORMANCE = 1 << 6,
		DEBUG_RENDER_ALL = 0x7F
	} DebugRenderFlags;
	/// Gizmo types
	typedef enum {
		GIZMO_TRANSLATION = 0,
		GIZMO_ROTATION = 1,
		GIZMO_SCALE = 2,
		GIZMO_UNIVERSAL = 3
	} GizmoType;
	//=============================================================================
	// CORE ENGINE LIFECYCLE
	//=============================================================================

	/* ── context lifecycle ─────────────────────────────────────── */
	ENGINE_API EngineContextHandle CreateEngineContext(void);
	ENGINE_API void                DestroyEngineContext(EngineContextHandle ctx);
	/* ── application lifecycle ─────────────────────────────────── */
	ENGINE_API int   EngineInit(EngineContextHandle ctx, int argc, char* argv[]);
	ENGINE_API int   EngineIterate(EngineContextHandle ctx);
	ENGINE_API void  EngineQuit(EngineContextHandle ctx);
	ENGINE_API int   EngineEvent(EngineContextHandle ctx, void* rawSDL_Event);
	/* ── engine info helpers ──────────────────────────────────── */
	ENGINE_API float       Engine_GetTileSize(EngineContextHandle ctx);
	ENGINE_API SDL_Window* Engine_GetWindow(EngineContextHandle ctx);
	ENGINE_API void        Engine_GetWindowSize(EngineContextHandle ctx, int* outWidth, int* outHeight);
	ENGINE_API void        Engine_GetMouseTile(EngineContextHandle ctx, int* outX, int* outY);
	ENGINE_API float       Engine_GetTickInterval(EngineContextHandle ctx);
	//=============================================================================
	// RENDER PIPELINE API
	//=============================================================================

	/// Submit a sprite for rendering at the specified layer and order
	ENGINE_API void Render_SubmitSprite(
		EngineContextHandle ctx,
		uint32_t textureID,
		float posX, float posY,        ///< World position (center)
		float sizeX, float sizeY,      ///< World size
		float rotation,                ///< Rotation in radians
		float colorR, float colorG, float colorB,  ///< Tint color
		float uvOffsetX, float uvOffsetY,          ///< UV offset
		float uvSizeX, float uvSizeY,              ///< UV size
		int layer,                     ///< Render layer (use RenderLayer enum values)
		int order                      ///< Order within layer (lower = earlier)
	);
	/// Submit a custom rendering callback at the specified layer
	ENGINE_API void Render_SubmitCustom(
		EngineContextHandle ctx,
		void (*callback)(void* userData),  ///< Custom render function
		void* userData,                    ///< User data passed to callback
		int layer,                         ///< Render layer
		int order                          ///< Order within layer
	);
	/// Submit a screen clear operation
	ENGINE_API void Render_SubmitClear(
		EngineContextHandle ctx,
		float r, float g, float b          ///< Clear color
	);
	/// Get the total number of render commands queued for this frame
	ENGINE_API int Render_GetCommandCount(EngineContextHandle ctx);
	/// Clear all pending render commands without executing them
	ENGINE_API void Render_ClearCommands(EngineContextHandle ctx);
	/// Execute all queued render commands immediately (advanced usage)
	ENGINE_API void Render_ExecuteFrame(EngineContextHandle ctx);
	/// Get the current view-projection matrix
	ENGINE_API void Render_GetViewProjectionMatrix(
		EngineContextHandle ctx,
		float outMatrix[16]  ///< 4x4 matrix in column-major order
	);
	/// Get the current camera bounds in world space  
	ENGINE_API void Render_GetCameraBounds(
		EngineContextHandle ctx,
		float* outMinX, float* outMinY,
		float* outMaxX, float* outMaxY
	);
	//=============================================================================
	// ENTITY MANAGEMENT API
	//=============================================================================

	ENGINE_API EntityId CreateEntity(EngineContextHandle ctx);
	ENGINE_API void     DestroyEntity(EngineContextHandle ctx, EntityId e);
	ENGINE_API int      Engine_GetAllEntities(EngineContextHandle ctx, uint32_t* outArr, int maxCount);
	ENGINE_API void Engine_GetEntityWorldPosition(
		EngineContextHandle ctx,
		EntityId eid,
		float* outX,
		float* outY
	);
	//=============================================================================
	// COMPONENT REFLECTION API
	//=============================================================================

	ENGINE_API int HasComponent(EngineContextHandle ctx, EntityId e, const char* comp);
	ENGINE_API int GetComponentField(EngineContextHandle ctx, EntityId e, const char* c, const char* f, void* out, int size);
	ENGINE_API int SetComponentField(EngineContextHandle ctx, EntityId e, const char* c, const char* f, const void* data, int size);
	ENGINE_API int SetComponentJson(EngineContextHandle ctx, EntityId e, const char* c, const char* json);
	ENGINE_API int GetComponentJson(EngineContextHandle ctx, EntityId e, const char* comp, char* outJson, int outSize);
	ENGINE_API int RemoveComponent(EngineContextHandle ctx, EntityId e, const char* comp);
	//=============================================================================
	// EVENT SYSTEM API
	//=============================================================================

	typedef void (*ScriptEventCallback)(const char* evt, const void* payload, int size, void* user);
	//=============================================================================
	// TILE BRUSH API
	//=============================================================================

	typedef enum {
		BRUSH_SINGLE = 0,
		BRUSH_RECTANGLE = 1,
		BRUSH_CIRCLE = 2,
		BRUSH_LINE = 3,
		BRUSH_PATTERN = 4,
		BRUSH_MULTI = 5
	} BrushType;
	typedef enum {
		BLEND_REPLACE = 0,
		BLEND_ADD = 1,
		BLEND_SUBTRACT = 2,
		BLEND_OVERLAY = 3
	} BlendMode;
	ENGINE_API void Engine_RunInContext(void (*fn)(void*), void* user);