CSharp/ScriptHost/Interop/EngineInterop.cs

// EngineInterop.cs - Core Engine Functionality
using System;
using System.Runtime.InteropServices;
using System.Text;

namespace WanderSpire.Scripting
{
    #region Core Types and Enums

    /// <summary>Entity handle for the ECS system</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct EntityId
    {
        public uint id;
        public bool IsValid => id != 0xFFFFFFFF;
        public static readonly EntityId Invalid = new EntityId { id = 0xFFFFFFFF };
    }


    /// <summary>Standard render layers - use custom values between these for fine control</summary>
    public enum RenderLayer
    {
        Background = -1000,  // Clear operations, skybox
        Terrain = 0,         // Ground tiles, background elements  
        Entities = 100,      // Game objects, sprites, characters
        Effects = 200,       // Particles, visual effects
        UI = 1000,          // User interface elements
        Debug = 2000,       // Debug overlays, gizmos
        PostProcess = 3000   // Screen effects, filters
    }

    /// <summary>Brush types for tile painting</summary>
    public enum BrushType
    {
        Single = 0,
        Rectangle = 1,
        Circle = 2,
        Line = 3,
        Pattern = 4,
        Multi = 5
    }

    /// <summary>Blend modes for tile painting</summary>
    public enum BlendMode
    {
        Replace = 0,
        Add = 1,
        Subtract = 2,
        Overlay = 3
    }

    #endregion

    #region Data Structures

    /// <summary>
    /// Frame rendering statistics
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct FrameStats
    {
        public float frameTime;
        public float renderTime;
        public float updateTime;
        public int drawCalls;
        public int triangles;
        public int entities;
        public long memoryUsed;
    }

    /// <summary>
    /// Performance metrics
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct PerformanceMetrics
    {
        public float avgFrameTime;
        public float minFrameTime;
        public float maxFrameTime;
        public float avgFPS;
        public int totalDrawCalls;
        public int totalTriangles;
        public long totalMemoryUsed;
        public long peakMemoryUsed;
    }

    /// <summary>
    /// Profiling section result
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ProfileSection
    {
        [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 64)]
        public string name;
        public float totalTime;
        public float avgTime;
        public float minTime;
        public float maxTime;
        public int callCount;
    }

    /// <summary>
    /// Texture information
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct TextureInfo
    {
        public int width;
        public int height;
        public int channels;
        public int format;
        public long memorySize;
        [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 256)]
        public string path;
    }

    #endregion

    #region Editor Render Flags

    [Flags]
    public enum EditorRenderFlags
    {
        None = 0,
        ShowGrid = 1 << 0,
        ShowGizmos = 1 << 1,
        ShowBounds = 1 << 2,
        ShowWireframe = 1 << 3,
        ShowNormals = 1 << 4,
        ShowColliders = 1 << 5,
        ShowLights = 1 << 6,
        ShowCameras = 1 << 7,
        ShowAudio = 1 << 8,
        ShowParticles = 1 << 9,
        ShowUI = 1 << 10,
        All = 0x7FF
    }

    [Flags]
    public enum DebugRenderFlags
    {
        None = 0,
        EntityBounds = 1 << 0,
        CollisionShapes = 1 << 1,
        Pathfinding = 1 << 2,
        Physics = 1 << 3,
        Audio = 1 << 4,
        Lighting = 1 << 5,
        Performance = 1 << 6,
        All = 0x7F
    }

    public enum GizmoType
    {
        Translation = 0,
        Rotation = 1,
        Scale = 2,
        Universal = 3
    }

    #endregion

    /// <summary>
    /// Main engine interop class providing core functionality
    /// </summary>
    public static class EngineInterop
    {
        private const string DLL = "EngineCore";

        /// <summary>
        /// Invalid entity constant - matches WS_INVALID_ENTITY in C++
        /// </summary>
        public const uint WS_INVALID_ENTITY = 0xFFFFFFFF;

        #region Delegate Types

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void RenderCallback(IntPtr userData);

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void ScriptEventCallback(IntPtr eventName, IntPtr payload, int payloadSize, IntPtr userData);

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void RawAction(IntPtr user);

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void RunInCtx_t(RawAction fn, IntPtr user);
        #endregion

        #region Core Engine Lifecycle

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr CreateEngineContext();

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void DestroyEngineContext(IntPtr ctx);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int EngineInit(IntPtr ctx, int argc, [MarshalAs(UnmanagedType.LPArray, ArraySubType = UnmanagedType.LPStr)] string[] argv);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int EngineIterate(IntPtr ctx);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void EngineQuit(IntPtr ctx);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int EngineEvent(IntPtr ctx, IntPtr rawEvent);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern float Engine_GetTileSize(IntPtr ctx);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Engine_GetWindow(IntPtr ctx);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_GetWindowSize(IntPtr ctx, out int outWidth, out int outHeight);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_GetMouseTile(IntPtr ctx, out int outX, out int outY);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern float Engine_GetTickInterval(IntPtr ctx);

        #endregion

        #region SDL3 Direct Functions

        [DllImport("SDL3", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SDL_ShowWindow(IntPtr window);

        [DllImport("SDL3", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SDL_RaiseWindow(IntPtr window);

        [DllImport("SDL3", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        public static extern bool SDL_PollEvent(IntPtr sdlEventPtr);

        [DllImport("SDL3", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SDL_GetWindowSizeInPixels(IntPtr window, out int width, out int height);

        [DllImport("SDL3", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SDL_GetMouseState(out float x, out float y);

        [DllImport("SDL3", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr SDL_GL_GetCurrentWindow();

        [DllImport("SDL3", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr SDL_GL_GetCurrentContext();

        #endregion

        #region Render Pipeline API

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Render_SubmitSprite(
            IntPtr ctx, uint textureID,
            float posX, float posY, float sizeX, float sizeY, float rotation,
            float colorR, float colorG, float colorB,
            float uvOffsetX, float uvOffsetY, float uvSizeX, float uvSizeY,
            int layer, int order);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Render_SubmitCustom(
            IntPtr ctx, RenderCallback callback, IntPtr userData, int layer, int order);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Render_SubmitClear(IntPtr ctx, float r, float g, float b);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int Render_GetCommandCount(IntPtr ctx);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Render_ClearCommands(IntPtr ctx);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Render_ExecuteFrame(IntPtr ctx);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Render_GetViewProjectionMatrix(IntPtr ctx, [Out] float[] outMatrix);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Render_GetCameraBounds(
            IntPtr ctx, out float outMinX, out float outMinY, out float outMaxX, out float outMaxY);

        #endregion

        #region Entity Management API

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern EntityId CreateEntity(IntPtr ctx);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void DestroyEntity(IntPtr ctx, EntityId eid);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int Engine_GetAllEntities(IntPtr ctx, [Out] uint[] outArr, int maxCount);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void Engine_GetEntityWorldPosition(IntPtr ctx, EntityId eid, out float outX, out float outY);

        #endregion

        #region Component Reflection API

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int HasComponent(IntPtr ctx, EntityId eid, [MarshalAs(UnmanagedType.LPStr)] string compName);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int GetComponentField(
            IntPtr ctx, EntityId eid,
            [MarshalAs(UnmanagedType.LPStr)] string comp,
            [MarshalAs(UnmanagedType.LPStr)] string field,
            IntPtr outBuf, int bufSize);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int SetComponentField(
            IntPtr ctx, EntityId eid,
            [MarshalAs(UnmanagedType.LPStr)] string comp,
            [MarshalAs(UnmanagedType.LPStr)] string field,
            IntPtr data, int dataSize);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int SetComponentJson(
            IntPtr ctx, EntityId eid,
            [MarshalAs(UnmanagedType.LPStr)] string comp,
            [MarshalAs(UnmanagedType.LPStr)] string jsonStr);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int GetComponentJson(
            IntPtr ctx, EntityId eid,
            [MarshalAs(UnmanagedType.LPStr)] string compName,
            [Out] byte[] outJson, int outJsonSize);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int RemoveComponent(
            IntPtr ctx, EntityId eid,
            [MarshalAs(UnmanagedType.LPStr)] string compName);

        #endregion

        #region Script Data API
